--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,4 @@ axum-streams = { version = "0.19.0", features = ["json"] }
 jsonrpc-async = "2.0.2"
 sha2 = "0.10.8"
 kanal = "0.1.0-pre8"
+nintypes = "0.1.0"
