--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,12 @@ rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
 postcard = "1.0.10"
 bytemuck = { version = "1.19.0", features = ["derive"] }
 tokio = { version = "1.41.0", features = ["full"] }
-itertools = "0.13.0"
+itertools = "0.14.0"
 futures = "0.3.31"
 hex = "0.4.3"
 rayon = "1.10.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-axum = "0.7.7"
+axum = "0.8.1"
 tracing-indicatif = "0.3.6"
 indicatif = "0.17.9"
 dutils = "0.1.1"
@@ -33,8 +33,9 @@ parking_lot = "0.12.3"
 lazy_static = "1.5.0"
 dotenv = "0.15.0"
 tokio-stream = "0.1.16"
-axum-streams = { version = "0.19.0", features = ["json"] }
+axum-streams = { version = "0.20.0", features = ["json"] }
 jsonrpc-async = "2.0.2"
 sha2 = "0.10.8"
 kanal = "0.1.0-pre8"
-nintypes = "0.1.0"
+nintypes = { version = "0.1.2", features = ["bellscoin"]}
+validator = { version = "0.20.0", features = ["derive"] }
