--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bel_20_node"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 anyhow = "1.0.91"
@@ -14,7 +14,7 @@ rust_decimal = { version = "1.36.0", features = [
 serde = { version = "1.0.213", features = ["derive"] }
 serde_with = "3.11.0"
 tracing = "0.1.40"
-serde_json = "1.0.132"
+serde_json = "1.0.140"
 bellscoin = "0.30.5"
 rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
 postcard = "1.0.10"
@@ -39,3 +39,5 @@ sha2 = "0.10.8"
 kanal = "0.1.0-pre8"
 nintypes = { version = "0.1.14", features = ["bellscoin"] }
 validator = { version = "0.20.0", features = ["derive"] }
+
+electrs_client = { git = "https://github.com/Nintondo/electrs-client" }
