--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.91"
-bellscoincore-rpc = "0.17.3"
+#bellscoincore-rpc = "0.17.3"
 num-traits = "0.2.19"
 rust_decimal = { version = "1.36.0", features = [
     "serde-bincode",
@@ -15,7 +15,7 @@ serde = { version = "1.0.213", features = ["derive"] }
 serde_with = "3.11.0"
 tracing = "0.1.40"
 serde_json = "1.0.140"
-bellscoin = "0.30.5"
+#bellscoin = "0.30.5"
 rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
 postcard = "1.0.10"
 bytemuck = { version = "1.19.0", features = ["derive"] }
@@ -37,7 +37,8 @@ axum-streams = { version = "0.20.0", features = ["json"] }
 jsonrpc-async = "2.0.2"
 sha2 = "0.10.8"
 kanal = "0.1.0-pre8"
-nintypes = { version = "0.1.14", features = ["bellscoin"] }
+nintypes = { version = "0.1.23", features = ["dogecoin"] }
 validator = { version = "0.20.0", features = ["derive"] }
 
 electrs_client = { git = "https://github.com/Nintondo/electrs-client" }
+nintondo-dogecoin = { version = "0.30.6" , features = ["serde"]}
